# Sonic-migrate

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  errors.rs  main.rs  migration.rs
