[package]
name = "sonic-migrate"
version = "0.1.1"
edition = "2024"
authors = ["Shivam Soni <shivamssoni6@gmail.com>"]
description = "CLI tool to migrate Solana Anchor projects to the Sonic Networks."
license = "MIT"
repository = "https://github.com/shivamSspirit/Sonic-migrate"
homepage = "https://github.com/shivamSspirit/Sonic-migrate"
documentation = "https://docs.rs/crate/sonic-migrate"
readme = "README.md"
keywords = ["solana", "anchor", "sonic", "cli"]

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
colored = "2.0"
indicatif = "0.17"
thiserror = "1.0"
tempfile = "3.8"